--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
@@ -339,7 +339,7 @@ ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93$
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.table_prefix=
 
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u503C${symbol_escape}u4E3A${symbol_escape}u5DF2${symbol_escape}u77E5${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u6216${symbol_escape}u81EA${symbol_escape}u5B9A${symbol_escape}u4E49${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u7F6E${symbol_escape}u7C7B${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: default, ${symbol_escape}u76EE${symbol_escape}u524D${symbol_escape}u652F${symbol_escape}u6301${symbol_escape}u5DF2${symbol_escape}u77E5${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668[default|dbcp|c3p0|druid|hikaricp|jndi|...]
-${symbol_pound}ymp.configs.persistence.jdbc.ds.default.adapter_class=dbcp
+ymp.configs.persistence.jdbc.ds.default.adapter_class=@{adapter_class}
 
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668${symbol_escape}u914D${symbol_escape}u7F6E${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}uFF0C${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570${symbol_escape}uFF0C${symbol_escape}u82E5${symbol_escape}u672A${symbol_escape}u8BBE${symbol_escape}u7F6E${symbol_escape}u6216${symbol_escape}u8BBE${symbol_escape}u7F6E${symbol_escape}u7684${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u8DEF${symbol_escape}u5F84${symbol_escape}u65E0${symbol_escape}u6548${symbol_escape}u5C06${symbol_escape}u88AB${symbol_escape}u5FFD${symbol_escape}u7565${symbol_escape}uFF0C${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C${symbol_escape}u4E3A${symbol_escape}u7A7A
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.config_file=
@@ -354,7 +354,7 @@ ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93$
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.driver_class=
 
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8FDE${symbol_escape}u63A5${symbol_escape}u5B57${symbol_escape}u7B26${symbol_escape}u4E32, ${symbol_escape}u5FC5${symbol_escape}u586B${symbol_escape}u53C2${symbol_escape}u6570
-ymp.configs.persistence.jdbc.ds.default.connection_url=jdbc:mysql://localhost:3306/db_name?useUnicode=true&useSSL=false&characterEncoding=UTF-8
+ymp.configs.persistence.jdbc.ds.default.connection_url=@{connection_url}
 
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8BBF${symbol_escape}u95EE${symbol_escape}u7528${symbol_escape}u6237${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u5FC5${symbol_escape}u586B${symbol_escape}u53C2${symbol_escape}u6570
 ymp.configs.persistence.jdbc.ds.default.username=root
@@ -416,3 +416,22 @@ ${symbol_pound}ymp.params.jdbc.output_path=
 
 ${symbol_pound} ${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u7684${symbol_escape}u4EE3${symbol_escape}u7801${symbol_escape}u6240${symbol_escape}u5C5E${symbol_escape}u5305${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: packages
 ymp.params.jdbc.package_name=${package}
+
+${symbol_pound}-------------------------------------
+${symbol_pound} module.websocket ${symbol_escape}u6A21${symbol_escape}u5757${symbol_escape}u521D${symbol_escape}u59CB${symbol_escape}u5316${symbol_escape}u53C2${symbol_escape}u6570
+${symbol_pound}-------------------------------------
+
+${symbol_pound} ${symbol_escape}u6A21${symbol_escape}u5757${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u5DF2${symbol_escape}u542F${symbol_escape}u7528, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: true
+${symbol_pound}ymp.configs.module.websocket.enabled=
+
+${symbol_pound} ${symbol_escape}u6D88${symbol_escape}u606F${symbol_escape}u5F02${symbol_escape}u6B65${symbol_escape}u53D1${symbol_escape}u9001${symbol_escape}u8D85${symbol_escape}u65F6${symbol_escape}u65F6${symbol_escape}u95F4, ${symbol_escape}u5355${symbol_escape}u4F4D: ${symbol_escape}u6BEB${symbol_escape}u79D2, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: 0
+${symbol_pound}ymp.configs.module.websocket.async_send_timeout=
+
+${symbol_pound} ${symbol_escape}u4F1A${symbol_escape}u8BDD${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u6700${symbol_escape}u5927${symbol_escape}u7A7A${symbol_escape}u95F2${symbol_escape}u8D85${symbol_escape}u65F6${symbol_escape}u65F6${symbol_escape}u95F4, ${symbol_escape}u5355${symbol_escape}u4F4D: ${symbol_escape}u6BEB${symbol_escape}u79D2, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: 0
+${symbol_pound}ymp.configs.module.websocket.default_max_session_idle_timeout=
+
+${symbol_pound} ${symbol_escape}u6587${symbol_escape}u672C${symbol_escape}u6D88${symbol_escape}u606F${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u6700${symbol_escape}u5927${symbol_escape}u7F13${symbol_escape}u51B2${symbol_escape}u533A${symbol_escape}u5927${symbol_escape}u5C0F, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: 0
+${symbol_pound}ymp.configs.module.websocket.default_max_text_message_buffer_size=
+
+${symbol_pound} ${symbol_escape}u4E8C${symbol_escape}u8FDB${symbol_escape}u5236${symbol_escape}u6D88${symbol_escape}u606F${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u6700${symbol_escape}u5927${symbol_escape}u7F13${symbol_escape}u51B2${symbol_escape}u533A${symbol_escape}u5927${symbol_escape}u5C0F, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: 0
+${symbol_pound}ymp.configs.module.websocket.default_max_binary_message_buffer_size=
