--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
@@ -1,3 +1,4 @@
+#set( $symbol_dollar = '&#36;' )
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -29,7 +30,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <connection_url>jdbc:h2:&#36;{root}/db/data;MODE=MySQL;DATABASE_TO_LOWER=TRUE</connection_url>
+                <connection_url>jdbc:h2:${symbol_dollar}{root}/db/data;MODE=MySQL;DATABASE_TO_LOWER=TRUE</connection_url>
                 <adapter_class/>
             </properties>
             <dependencies>
