--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/src/main/resources/ymp-conf.properties
@@ -197,6 +197,9 @@ ${symbol_pound}ymp.params.jdbc.named_filter_class=
 ${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u6DFB${symbol_escape}u52A0${symbol_escape}u7C7B${symbol_escape}u6210${symbol_escape}u5458${symbol_escape}u5C5E${symbol_escape}u6027${symbol_escape}u503C${symbol_escape}u72B6${symbol_escape}u6001${symbol_escape}u53D8${symbol_escape}u5316${symbol_escape}u6CE8${symbol_escape}u89E3, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
 ymp.params.jdbc.use_state_support=true
 
+${symbol_pound} ${symbol_escape}u4E3A${symbol_escape}u517C${symbol_escape}u5BB9${symbol_escape}u5386${symbol_escape}u53F2${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u4FDD${symbol_escape}u6301${symbol_escape}u539F${symbol_escape}u8868${symbol_escape}u548C${symbol_escape}u5B57${symbol_escape}u6BB5${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u7684${symbol_escape}u5927${symbol_escape}u5C0F${symbol_escape}u5199${symbol_escape}uFF0C${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+${symbol_pound}ymp.params.jdbc.keep_case=true
+
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.params.jdbc.db_name=
 
