--- a/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -17,6 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ymate.platform.version>2.1.0</ymate.platform.version>
         <ymate.platform.test.version>1.0.0</ymate.platform.test.version>
+        <ymate.apidocs.version>2.0.0</ymate.apidocs.version>
         <ymate.maven.plugin.version>1.0.0</ymate.maven.plugin.version>
     </properties>
 
@@ -228,6 +229,13 @@
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-persistence-jdbc</artifactId>
             <version>${ymate.platform.version}</version>
+        </dependency>
+        -->
+        <!--
+        <dependency>
+            <groupId>net.ymate.apidocs</groupId>
+            <artifactId>ymate-apidocs-annotation</artifactId>
+            <version>${ymate.apidocs.version}</version>
         </dependency>
         -->
         <dependency>
