--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ymate-archetype-module</module>
         <module>ymate-archetype-quickstart</module>
         <module>ymate-archetype-webapp</module>
+        <module>ymate-archetype-webapp-adminlte</module>
     </modules>
 
     <developers>
@@ -34,7 +35,7 @@
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
-            <url>http://apache.org/licenses/LICENSE-2.0.txt</url>
+            <url>https://apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
 
