--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -53,6 +53,13 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>net.ymate.maven.plugins</groupId>
+                <artifactId>ymate-maven-plugin</artifactId>
+                <version>${ymate.maven.plugin.version}</version>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
