--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/pom.xml
@@ -1,124 +1,37 @@
-#set( $symbol_dollar = '&#36;' )
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>${groupId}</groupId>
+    <parent>
+        <artifactId>${rootArtifactId}</artifactId>
+        <groupId>${groupId}</groupId>
+        <version>${version}</version>
+    </parent>
+
     <artifactId>${artifactId}</artifactId>
     <packaging>war</packaging>
-    <version>${version}</version>
 
     <name>${artifactId}</name>
     <url>https://www.ymate.net/</url>
-    <description>YMP Webapp Archetype</description>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <ymate.platform.version>2.1.1</ymate.platform.version>
-        <ymate.platform.test.version>1.0.0</ymate.platform.test.version>
-        <ymate.apidocs.version>2.0.0</ymate.apidocs.version>
-        <ymate.maven.plugin.version>1.0.1</ymate.maven.plugin.version>
-        <ymate.module.websocket.version>2.0.0</ymate.module.websocket.version>
-        <ymate.module.embed.version>1.0.2</ymate.module.embed.version>
-        <tomcat.version>9.0.65</tomcat.version>
-    </properties>
-
-    <profiles>
-        <profile>
-            <id>h2</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <connection_url>jdbc:h2:${symbol_dollar}{root}/db/data;MODE=MySQL;DATABASE_TO_LOWER=TRUE</connection_url>
-                <adapter_class/>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                    <version>2.0.204</version>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>mysql</id>
-            <properties>
-                <connection_url>jdbc:mysql://localhost:3306/db_name?useUnicode=true&amp;useSSL=false&amp;characterEncoding=UTF-8</connection_url>
-                <adapter_class>dbcp</adapter_class>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.commons</groupId>
-                    <artifactId>commons-dbcp2</artifactId>
-                    <version>2.9.0</version>
-                </dependency>
-                <dependency>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <version>8.0.28</version>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
+    <description>YMP Microservice Web Starter Archetype</description>
 
     <build>
         <finalName>${artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <filtering>true</filtering>
                 <excludes>
                     <!--
                     <exclude>**/ymp-*.properties</exclude>
                     -->
                     <exclude>**/ymp-conf_DEV.properties</exclude>
                 </excludes>
+                <filtering>false</filtering>
             </resource>
         </resources>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>net.ymate.maven.plugins</groupId>
-                <artifactId>ymate-maven-plugin</artifactId>
-                <version>${ymate.maven.plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-archetype-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <delimiters>
-                        <delimiter>@{*}</delimiter>
-                    </delimiters>
-                    <useDefaultDelimiters>false</useDefaultDelimiters>
-                    <nonFilteredFileExtensions>
-                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
-                    </nonFilteredFileExtensions>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -222,61 +135,35 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>net.ymate.platform</groupId>
-            <artifactId>ymate-platform-test</artifactId>
-            <version>1.0.0</version>
-            <scope>test</scope>
-        </dependency>
-        -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2.2</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>net.ymate.apidocs</groupId>
-            <artifactId>ymate-apidocs-annotation</artifactId>
-            <version>${ymate.apidocs.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.ymate.module</groupId>
-            <artifactId>ymate-module-embed-tomcat</artifactId>
-            <version>${ymate.module.embed.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!--
-        <dependency>
-            <groupId>net.ymate.module</groupId>
-            <artifactId>ymate-module-websocket</artifactId>
-            <version>${ymate.module.websocket.version}</version>
-        </dependency>
-        -->
-        <dependency>
-            <groupId>net.ymate.platform</groupId>
-            <artifactId>ymate-platform-persistence-jdbc</artifactId>
-            <version>${ymate.platform.version}</version>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-starter-web</artifactId>
-            <version>${ymate.platform.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.ymate.module</groupId>
+            <artifactId>ymate-module-embed-tomcat</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.ymate.port</groupId>
+            <artifactId>ymate-port-protocol-http</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>${rootArtifactId}-impl</artifactId>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 </project>
