--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
@@ -42,6 +42,7 @@
                 <executions>
                     <execution>
                         <id>make-assembly</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
@@ -62,7 +63,7 @@
         </dependency>
         <dependency>
             <groupId>net.ymate.port</groupId>
-            <artifactId>ymate-port-protocol-http-tomcat</artifactId>
+            <artifactId>ymate-port-protocol-http</artifactId>
         </dependency>
         <dependency>
             <groupId>${groupId}</groupId>
