--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
@@ -36,6 +36,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2.2</version>
                 <configuration>
+                    <appendAssemblyId>true</appendAssemblyId>
                     <descriptors>
                         <descriptor>src/main/assembly/assembly.xml</descriptor>
                     </descriptors>
@@ -43,6 +44,7 @@
                 <executions>
                     <execution>
                         <id>make-assembly</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
@@ -63,8 +65,8 @@
             <artifactId>commons-dbcp2</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
