--- a/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -219,9 +219,9 @@
             <version>2.9.0</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.49</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.32</version>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
