--- a/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/pom.xml
@@ -56,9 +56,9 @@
                     <version>2.9.0</version>
                 </dependency>
                 <dependency>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <version>8.0.28</version>
+                    <groupId>com.mysql</groupId>
+                    <artifactId>mysql-connector-j</artifactId>
+                    <version>8.0.32</version>
                 </dependency>
             </dependencies>
         </profile>
