--- a/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
@@ -229,6 +229,9 @@ ${symbol_pound}-------------------------------------
 ${symbol_pound} ${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u4E0A${symbol_escape}u4F20${symbol_escape}u4E34${symbol_escape}u65F6${symbol_escape}u76EE${symbol_escape}u5F55, ${symbol_escape}u4E3A${symbol_escape}u7A7A${symbol_escape}u5219${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u4F7F${symbol_escape}u7528${symbol_escape}uFF1ASystem.getProperty("java.io.tmpdir")
 ${symbol_pound}ymp.configs.webmvc.upload_temp_dir=
 
+${symbol_pound} ${symbol_escape}u4E0A${symbol_escape}u4F20${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u6570${symbol_escape}u91CF${symbol_escape}u6700${symbol_escape}u5927${symbol_escape}u503C${symbol_escape}uFF0C${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C${symbol_escape}uFF1A-1
+${symbol_pound}ymp.configs.webmvc.upload_file_count_max=
+
 ${symbol_pound} ${symbol_escape}u4E0A${symbol_escape}u4F20${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u5927${symbol_escape}u5C0F${symbol_escape}u6700${symbol_escape}u5927${symbol_escape}u503C(${symbol_escape}u5B57${symbol_escape}u8282), ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: -1(${symbol_escape}u6CE8: 10485760 = 10M)
 ${symbol_pound}ymp.configs.webmvc.upload_file_size_max=
 
@@ -315,6 +318,9 @@ ${symbol_pound}ymp.params.webmvc.validation_template_item=
 
 ${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u4E0A${symbol_escape}u4F20${symbol_escape}u7684${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u7C7B${symbol_escape}u578B, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A(${symbol_escape}u8868${symbol_escape}u793A${symbol_escape}u4E0D${symbol_escape}u9650${symbol_escape}u5236)
 ${symbol_pound}ymp.params.webmvc.allowed_upload_content_types=
+
+${symbol_pound} ${symbol_escape}u53C2${symbol_escape}u6570${symbol_escape}u7B7E${symbol_escape}u540D${symbol_escape}u68C0${symbol_escape}u6D4B${symbol_escape}u65F6${symbol_escape}u95F4${symbol_escape}u6233${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u5728${symbol_escape}u6709${symbol_escape}u6548${symbol_escape}u5468${symbol_escape}u671F${symbol_escape}u5185${symbol_escape}uFF0C${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u4E3A30${symbol_escape}u79D2${symbol_escape}uFF0C${symbol_escape}u5F53${symbol_escape}u53D6${symbol_escape}u503C${symbol_escape}u5C0F${symbol_escape}u4E8E${symbol_escape}u7B49${symbol_escape}u4E8E0${symbol_escape}u65F6${symbol_escape}u8868${symbol_escape}u793A${symbol_escape}u4E0D${symbol_escape}u68C0${symbol_escape}u6D4B${symbol_escape}uFF0C${symbol_escape}u5355${symbol_escape}u4F4D${symbol_escape}uFF1A${symbol_escape}u79D2
+ymp.params.webmvc.signature_time_lifecycle=
 
 ${symbol_pound}-------------------------------------
 ${symbol_pound} JDBC${symbol_escape}u6301${symbol_escape}u4E45${symbol_escape}u5316${symbol_escape}u6A21${symbol_escape}u5757${symbol_escape}u521D${symbol_escape}u59CB${symbol_escape}u5316${symbol_escape}u53C2${symbol_escape}u6570
