--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/pom.xml
@@ -128,6 +128,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>net.ymate.port</groupId>
+                <artifactId>ymate-port-maven-plugin</artifactId>
+                <version>${ymate.port.version}</version>
+            </plugin>
+            <!--
+            <plugin>
+                <groupId>net.ymate.maven.plugins</groupId>
+                <artifactId>ymate-maven-plugin</artifactId>
+                <version>${ymate.maven.plugin.version}</version>
+            </plugin>
+            -->
         </plugins>
     </build>
 
