--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
@@ -29,6 +29,10 @@
                 </excludes>
                 <filtering>false</filtering>
             </resource>
+            <resource>
+                <directory>src/main/cfgs</directory>
+                <targetPath>${project.build.directory}/cfgs</targetPath>
+            </resource>
         </resources>
         <plugins>
             <plugin>
