--- a/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/pom.xml
@@ -34,6 +34,7 @@
             </activation>
             <properties>
                 <connection_url>jdbc:h2:${symbol_dollar}{root}/db/data;MODE=MySQL;DATABASE_TO_LOWER=TRUE</connection_url>
+                <adapter_class/>
             </properties>
             <dependencies>
                 <dependency>
@@ -65,7 +66,7 @@
     </profiles>
 
     <build>
-        <finalName>demo</finalName>
+        <finalName>${artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
