--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
@@ -307,6 +307,9 @@ ${symbol_pound}ymp.params.webmvc.exception_analysis_disabled=
 ${symbol_pound} ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u5F02${symbol_escape}u5E38${symbol_escape}u54CD${symbol_escape}u5E94${symbol_escape}u89C6${symbol_escape}u56FE${symbol_escape}u683C${symbol_escape}u5F0F, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u8303${symbol_escape}u56F4: json|xml
 ${symbol_pound}ymp.params.webmvc.error_default_view_format=
 
+${symbol_pound} ${symbol_escape}u5F02${symbol_escape}u5E38${symbol_escape}u54CD${symbol_escape}u5E94${symbol_escape}u65F6${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u4F7F${symbol_escape}u7528${symbol_escape}u72B6${symbol_escape}u6001${symbol_escape}u7801, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false, ${symbol_escape}u82E5${symbol_escape}u5F00${symbol_escape}u542F${symbol_escape}u5219${symbol_escape}u5F53${symbol_escape}u53D1${symbol_escape}u751F${symbol_escape}u5F02${symbol_escape}u5E38${symbol_escape}u65F6${symbol_escape}u54CD${symbol_escape}u5E94${symbol_escape}u7684${symbol_escape}u72B6${symbol_escape}u6001${symbol_escape}u7801${symbol_escape}u503C${symbol_escape}u4E3A400(BAD_REQUEST)
+${symbol_pound}ymp.params.webmvc.error_with_status_code=
+
 ${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u4E0A${symbol_escape}u4F20${symbol_escape}u7684${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u7C7B${symbol_escape}u578B${symbol_escape}u9A8C${symbol_escape}u8BC1, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.params.webmvc.validation_allow_upload_content_types=
 
