--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/src/main/resources/ymp-conf.properties
@@ -323,7 +323,7 @@ ${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u4E0A$
 ${symbol_pound}ymp.params.webmvc.allowed_upload_content_types=
 
 ${symbol_pound} ${symbol_escape}u53C2${symbol_escape}u6570${symbol_escape}u7B7E${symbol_escape}u540D${symbol_escape}u68C0${symbol_escape}u6D4B${symbol_escape}u65F6${symbol_escape}u95F4${symbol_escape}u6233${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u5728${symbol_escape}u6709${symbol_escape}u6548${symbol_escape}u5468${symbol_escape}u671F${symbol_escape}u5185${symbol_escape}uFF0C${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u4E3A30${symbol_escape}u79D2${symbol_escape}uFF0C${symbol_escape}u5F53${symbol_escape}u53D6${symbol_escape}u503C${symbol_escape}u5C0F${symbol_escape}u4E8E${symbol_escape}u7B49${symbol_escape}u4E8E0${symbol_escape}u65F6${symbol_escape}u8868${symbol_escape}u793A${symbol_escape}u4E0D${symbol_escape}u68C0${symbol_escape}u6D4B${symbol_escape}uFF0C${symbol_escape}u5355${symbol_escape}u4F4D${symbol_escape}uFF1A${symbol_escape}u79D2
-ymp.params.webmvc.signature_time_lifecycle=
+${symbol_pound}ymp.params.webmvc.signature_time_lifecycle=
 
 ${symbol_pound}-------------------------------------
 ${symbol_pound} JDBC${symbol_escape}u6301${symbol_escape}u4E45${symbol_escape}u5316${symbol_escape}u6A21${symbol_escape}u5757${symbol_escape}u521D${symbol_escape}u59CB${symbol_escape}u5316${symbol_escape}u53C2${symbol_escape}u6570
