--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter-web/pom.xml
@@ -17,27 +17,91 @@
     <url>https://www.ymate.net/</url>
     <description>YMP Microservice Web Starter Archetype</description>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <envId>dev</envId>
+                <connection_url>jdbc:mysql://localhost:3306/db_name?useUnicode=true&amp;useSSL=false&amp;characterEncoding=UTF-8</connection_url>
+                <adapter_class>dbcp</adapter_class>
+                <log_level>debug</log_level>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
-        <finalName>${artifactId}</finalName>
+        <finalName>${artifactId}-${envId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>true</filtering>
                 <excludes>
                     <!--
                     <exclude>**/ymp-*.properties</exclude>
                     -->
                     <exclude>**/ymp-conf_DEV.properties</exclude>
+                    <exclude>**/env/*/*.*</exclude>
                 </excludes>
-                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources/env/${envId}</directory>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}/classes</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/webapp/WEB-INF/cfgs</directory>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}/${project.build.finalName}/WEB-INF/cfgs</targetPath>
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <delimiters>
+                        <delimiter>@{*}</delimiter>
+                    </delimiters>
+                    <useDefaultDelimiters>false</useDefaultDelimiters>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.2</version>
+                <configuration>
+                    <appendAssemblyId>true</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <tarLongFileMode>gnu</tarLongFileMode>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
                     <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
+                    <warSourceExcludes>WEB-INF/cfgs/</warSourceExcludes>
                     <archive>
                         <manifest>
                             <mainClass>net.ymate.module.embed.Main</mainClass>
