--- a/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/src/main/resources/simplelog.properties
+++ b/ymate-archetype-webapp-adminlte/src/main/resources/archetype-resources/src/main/resources/simplelog.properties
@@ -2,7 +2,7 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 ${symbol_pound}
-org.apache.commons.logging.simplelog.defaultlog=debug
+org.apache.commons.logging.simplelog.defaultlog=@{log_level}
 org.apache.commons.logging.simplelog.showlogname=true
 org.apache.commons.logging.simplelog.showShortLogname=true
 org.apache.commons.logging.simplelog.showdatetime=true
