--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
@@ -15,13 +15,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <ymate.platform.version>2.1.2</ymate.platform.version>
+        <ymate.platform.version>2.1.3-dev</ymate.platform.version>
         <ymate.platform.test.version>1.0.1</ymate.platform.test.version>
-        <ymate.apidocs.version>2.0.1</ymate.apidocs.version>
-        <ymate.maven.plugin.version>1.0.2</ymate.maven.plugin.version>
+        <ymate.apidocs.version>2.0.2-dev</ymate.apidocs.version>
+        <ymate.maven.plugin.version>1.0.3-dev</ymate.maven.plugin.version>
         <ymate.module.websocket.version>2.0.0</ymate.module.websocket.version>
-        <ymate.module.embed.version>1.0.3</ymate.module.embed.version>
-        <tomcat.version>9.0.80</tomcat.version>
+        <ymate.module.embed.version>1.0.4-dev</ymate.module.embed.version>
+        <tomcat.version>9.0.88</tomcat.version>
     </properties>
 
     <profiles>
@@ -31,14 +31,16 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <envId>dev</envId>
                 <connection_url>jdbc:mysql://localhost:3306/db_name?useUnicode=true&amp;useSSL=false&amp;characterEncoding=UTF-8</connection_url>
                 <adapter_class>dbcp</adapter_class>
+                <log_level>debug</log_level>
             </properties>
         </profile>
     </profiles>
 
     <build>
-        <finalName>${artifactId}</finalName>
+        <finalName>${artifactId}-${envId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -48,7 +50,18 @@
                     <exclude>**/ymp-*.properties</exclude>
                     -->
                     <exclude>**/ymp-conf_DEV.properties</exclude>
+                    <exclude>**/env/*/*.*</exclude>
                 </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/env/${envId}</directory>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}/classes</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/webapp/WEB-INF/cfgs</directory>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}/${project.build.finalName}/WEB-INF/cfgs</targetPath>
             </resource>
         </resources>
         <plugins>
@@ -95,10 +108,34 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.2</version>
+                <configuration>
+                    <appendAssemblyId>true</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <tarLongFileMode>gnu</tarLongFileMode>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
                     <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
+                    <warSourceExcludes>WEB-INF/cfgs/</warSourceExcludes>
                     <archive>
                         <manifest>
                             <mainClass>net.ymate.module.embed.Main</mainClass>
