--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
@@ -15,12 +15,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <ymate.platform.version>2.1.3-dev</ymate.platform.version>
+        <ymate.platform.version>2.1.2</ymate.platform.version>
         <ymate.platform.test.version>1.0.1</ymate.platform.test.version>
-        <ymate.apidocs.version>2.0.2-dev</ymate.apidocs.version>
-        <ymate.maven.plugin.version>1.0.3-dev</ymate.maven.plugin.version>
+        <ymate.apidocs.version>2.0.1</ymate.apidocs.version>
+        <ymate.maven.plugin.version>1.0.2</ymate.maven.plugin.version>
         <ymate.module.websocket.version>2.0.0</ymate.module.websocket.version>
-        <ymate.module.embed.version>1.0.4-dev</ymate.module.embed.version>
+        <ymate.module.embed.version>1.0.3</ymate.module.embed.version>
         <tomcat.version>9.0.88</tomcat.version>
     </properties>
 
